<resources>
    <string name="app_name">VGlibvol</string>
    <string name="nav_search">Search</string>
    <string name="nav_collection">Collection</string>
    <string name="nav_wishlist">Wishlist</string>
    <string name="nav_statistics">Statistics</string>
    <string name="nav_options">Options</string>
    <string name="nav_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
